Minor refactorings and admin page view changes

--- a/FitnessGuru-Main/Views/Admin/Details.cshtml
+++ b/FitnessGuru-Main/Views/Admin/Details.cshtml
@@ -109,10 +109,11 @@
     </dl>
 </div>
 <p>
+
+    @Html.ActionLink("Back to List", "Index")
     @if (!IsTrainer)
     {
-        @Html.ActionLink("Convert to Trainer", "AddAsTrainer", new {UserId = Model.UserId}) @:|
+        @:| @Html.ActionLink("Convert to Trainer", "AddAsTrainer", new { UserId = Model.UserId }) 
 
     }
-    @Html.ActionLink("Back to List", "Index")
 </p>
