--- a/FitnessGuru-Main/Content/Site.css
+++ b/FitnessGuru-Main/Content/Site.css
@@ -260,12 +260,15 @@ h1 {
 
 
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 320px) {
 
+    .homepageDtl {
+        font-size: 3vw;
+    }
 
     .col-xs-12 > .carousel > .carousel-inner {
         width: 100%;
-        height: 225px !important;
+        height: 100px !important;
     }
 
     .carousel-caption {
@@ -273,10 +276,14 @@ h1 {
     }
 }
 
-@media only screen and (min-width: 600px) {
+@media only screen and (min-width: 320px) {
+    .homepageDtl {
+        font-size: 3.8vw;
+    }
+
     .col-xs-12 > .carousel > .carousel-inner {
         width: 100%;
-        height: 300px !important;
+        height: 150px !important;
     }
 
     .carousel-caption {
@@ -284,37 +291,78 @@ h1 {
     }
 }
 
-@media only screen and (min-width: 768px) {
-    .col-xs-12 > .carousel > .carousel-inner {
-        width: 100%;
-        height: 400px !important;
+
+@media only screen and (min-width: 375px) {
+    .homepageDtl {
+        font-size: 4vw;
     }
 
-    .carousel-caption {
-        top: 46%;
+    .col-xs-12 > .carousel > .carousel-inner {
+        width: 100%;
+        height: 180px !important;
     }
+
+}
+
+
+@media only screen and (min-width: 425px) {
+    .homepageDtl {
+        font-size: 4vw;
+    }
+
+    .col-xs-12 > .carousel > .carousel-inner {
+        width: 100%;
+        height: 200px !important;
+    }
+
+}
+
+@media only screen and (min-width: 768px) {
+    .homepageDtl {
+        font-size: 4vw;
+    }
+
+    .col-xs-12 > .carousel > .carousel-inner {
+        width: 100%;
+        height: 450px !important;
+    }
+
 }
 
 @media only screen and (min-width: 992px) {
-    .col-xs-12 > .carousel > .carousel-inner {
-        width: 100%;
-        height: 500px !important;
+    .homepageDtl {
+        font-size: 3vw;
     }
 
-    .carousel-caption {
-        top: 46%;
+    .col-xs-12 > .carousel > .carousel-inner {
+        width: 100%;
+        height: 525px !important;
     }
+
 }
 
 @media only screen and (min-width: 1200px) {
-    .col-xs-12 > .carousel > .carousel-inner {
-        width: 100%;
-        height: 600px !important;
+    .homepageDtl {
+        font-size: 2.5vw;
     }
 
-    .carousel-caption {
-        top: 46%;
+    .col-xs-12 > .carousel > .carousel-inner {
+        width: 100%;
+        height: 550px !important;
     }
+
+}
+
+@media only screen and (min-width: 1600px) {
+    .homepageDtl {
+        font-size: 2vw;
+    }
+
+    .col-xs-12 > .carousel > .carousel-inner {
+        width: 100%;
+        height: 550px !important;
+    }
+
 }
 
 .nav-selected {
