--- a/FitnessGuru-Main/Views/Admin/Index.cshtml
+++ b/FitnessGuru-Main/Views/Admin/Index.cshtml
@@ -6,63 +6,45 @@
 
 <h2>Welcome Admin</h2>
 
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.FirstName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.LastName)
-        </th>
-        @*<th>
-            @Html.DisplayNameFor(model => model.DOB)
-        </th>*@
+<div style="margin-top: 60px">
+    <table id="memberDetailsTbl" class="table table-bordered">
+        <thead>
+            <tr>
+                <th>
+                    @Html.DisplayNameFor(model => model.FirstName)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.LastName)
+                </th>
+                <th>
+                    Action
+                </th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.FirstName)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.LastName)
+                    </td>
+                    <td>
+                        @Html.ActionLink("Details", "Details", new { id = item.Id }, new {@class="btn btn-link"})
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
+</div>
 
-        @*<th>
-            @Html.DisplayNameFor(model => model.Desc)
-        </th>*@
-        @*<th>
-            @Html.DisplayNameFor(model => model.UserId)
-        </th>*@
-        @*<th>
-            @Html.DisplayNameFor(model => model.Gender)
-        </th>*@
-        <th></th>
-    </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.FirstName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.LastName)
-        </td>
-        @*<td>
-            @Html.DisplayFor(modelItem => item.DOB)
-        </td>*@
-        @*<td>
-            @Html.DisplayFor(modelItem => item.AddressLine1)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.AddressLine2)
-        </td>*@
-        @*<td>
-            @Html.DisplayFor(modelItem => item.ProfilePicPath)
-        </td>*@
-        @*<td>
-            @Html.DisplayFor(modelItem => item.Desc)
-        </td>*@
-        @*<td>
-            @Html.DisplayFor(modelItem => item.UserId)
-        </td>*@
-        @*<td>
-            @Html.DisplayFor(modelItem => item.Gender)
-        </td>*@
-        <td>
-            @Html.ActionLink("Details", "Details", new { id=item.Id })
-        </td>
-    </tr>
+@section scripts{
+    <script>
+        $(document).ready(function () {
+            $('#memberDetailsTbl').DataTable();
+        });
+    </script>
 }
-
-</table>
