--- a/FitnessGuru-Main/Views/Home/Contact.cshtml
+++ b/FitnessGuru-Main/Views/Home/Contact.cshtml
@@ -1,18 +1,16 @@
 ﻿@{
     ViewBag.Title = "Contact";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+<h2>@ViewBag.Title Me</h2>
 
 <address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
+    4/58 Leila Road <br />
+    Carnegie, VIC 3163<br />
     <abbr title="Phone">P:</abbr>
-    425.555.0100
+    0481198900
 </address>
 
 
 <address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+    <strong>Got Queries:</strong>   <a href="mailto:admin@fitnessguru.com">admin@fitnessguru.com</a>
 </address>
