--- a/FitnessGuru-Main/Views/Shared/_Layout.cshtml
+++ b/FitnessGuru-Main/Views/Shared/_Layout.cshtml
@@ -25,27 +25,20 @@
                     <li>@Html.ActionLink("Home", "Index", "Home", null, new { id = "homeId", @class = "nav-item" })</li>
                     @if (Request.IsAuthenticated)
                     {
-                        @*<div class="col-md-3 col-xs-6">
-                                @using (Html.BeginForm("ShowHistory", "GymMembers", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-                                {
-                                    @Html.AntiForgeryToken()
-                                    <div class="form-group">
-                                        <div class="form-group">
-                                            <div>
-                                                <input type="submit" value="View History" class="btn btn-default control-label h3" />
-                                            </div>
-                                        </div>
-                                    </div>
+                        if (!User.IsInRole(RoleName.Admin))
+                        {
+                            var controller = User.IsInRole(RoleName.Trainer) ? "Trainers" : "GymMembers";
+                            var action = User.IsInRole(RoleName.Trainer) ? "History" : "ShowHistory";
+                            <li>@Html.ActionLink("Session History", @action, @controller, null, new { id = "historyId", @class = "nav-item" })</li>
+                        }
+                        else
+                        {
 
-                                }
-                            </div>*@
-                        var controller = User.IsInRole(RoleName.Trainer) ? "Trainers" : "GymMembers";
-                        var action = User.IsInRole(RoleName.Trainer) ? "History" : "ShowHistory";
-                        <li>@Html.ActionLink("Session History", @action, @controller, null, new { id = "historyId", @class = "nav-item" })</li>
+                        }
                     }
                     else
                     {
-                        <li>@Html.ActionLink("About", "About", "Home", null, new { id = "aboutId", @class = "nav-item" })</li>
+                        @*<li>@Html.ActionLink("About", "About", "Home", null, new { id = "aboutId", @class = "nav-item" })</li>*@
                         <li>@Html.ActionLink("Contact", "Contact", "Home", null, new { id = "contactId", @class = "nav-item" })</li>
                     }
                 </ul>
