--- a/FitnessGuru-Main/Views/GymMembers/Index.cshtml
+++ b/FitnessGuru-Main/Views/GymMembers/Index.cshtml
@@ -102,7 +102,9 @@
     <script src="~/Scripts/memberSessionIndex.js"></script>
     <script src="~/Scripts/toastr.js"></script>
     <script>
-        $(document).ready(function() {
+        $(document).ready(function () {
+
+            console.log("@ViewBag.CurrentTime");
 
             var joinedsessionstable = $("#joinedsessions")
             var joinedtable = joinedsessionstable.DataTable(
